# autonomous_robots_project

./: README.md
base-image/: Dockerfile  README.md
cone-detection/: CMakeLists.txt  README.md
cone-detection-new-approach/: Dockerfile  README.md  cmds  todo.txt
cone-detection-new-approach/src/: cone-detection.cpp  opendlv-standard-message-set-v0.9.10.odvd
cone-detection/src/: cone-detection.cpp
data-replay/: h264-replay-viewer.yml
data-replay/kiwi-recordings/additional/: 1.rec
docker-compose-microservices/: README.md  docker-compose.yml
extract-frame-from-rec-file/: CMakeLists.txt  README.md  extract-frame  install.sh
extract-frame-from-rec-file/src/: extract-frame.cpp
kiwi-detection/: README.md  generate_dataset.py  xml_annotation-template.xml
kiwi-detection-yolo/fastest/: Yolo_Fastest_Train.ipynb
kiwi-detection-yolo/fastest/best model/: fastest.weights
logic/: CMakeLists.txt  Dockerfile  README.md
logic/src/: behavior.cpp  behavior.hpp  logic.cpp  opendlv-standard-message-set-v0.9.10.odvd
opendlv-kiwi-detection/: CMakeLists.txt  Dockerfile  README.md
opendlv-kiwi-detection/src/: kalman.cpp  kalman.hpp
opendlv-logic-primechecker/: CMakeLists.txt  Dockerfile  README.md  helloworld.cpp  messages.hpp  messages.odvd  prime-checker.cpp  prime-checker.hpp  test-prime-checker.cpp
simulation/: README.md
